--- a/css - practice/style.css
+++ b/css - practice/style.css
@@ -52,3 +52,55 @@ tr.head th:first-child {
 tr.head th:last-child {
   border-top-right-radius: 50px;
 }
+
+fieldset {
+  width: 310px;
+  margin-top: 20px;
+  border: 1px solid #d6d6d6;
+  line-height: 1.6em;
+}
+
+legend {
+  font-style: italic;
+  color: #666666;
+}
+
+input[type="text"] {
+  width: 120px;
+  border: 1px solid #d6d6d6;
+  outline: none;
+  padding: 2px;
+}
+
+input[type="text"]:focus,
+input[type="text"]:hover {
+  background-color: #d0e2f0;
+  border: 1px solid #999999;
+}
+
+input[type="submit"] {
+  border: 1px solid #006633;
+  background-color: #00CC33;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+input[type="submit"]:hover {
+  background-color: #009966;
+  border: 1px solid #006633;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.submit {
+  text-align: right;
+  width: 335px;
+  margin-top: 10px;
+}
+
+.title {
+  float: left;
+  width: 160px;
+  clear: left;
+}
