--- a/css grid/style.css
+++ b/css grid/style.css
@@ -1,7 +1,7 @@
 #container {
   display: grid;
-  grid-template-rows: [header-start] 1fr [content-start] 4fr [footer-start] 1fr;
-  grid-template-columns: [ads] 2fr [main] 5fr [links] 2fr;
+  grid-template-rows: [header-start] 100px [content-start] 400px [footer-start] 100px;
+  grid-template-columns: [ads] 200px [main] 500px [links] 200px;
   grid-template-areas: 
     "header   header    header"
     "ads      main      links"
@@ -13,6 +13,10 @@
 #header {
   text-align: center;
   grid-area: header;
+  /* grid-row-start: 3;
+  grid-row-end: 4;
+  grid-column-start: 2;
+  grid-column-end: 4; */
 }
 
 #two {
